auth firebase done with spinner

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^1.22.0
   firebase_auth: ^3.8.0
   cloud_firestore: ^3.4.7
+  flutter_spinkit: ^5.1.0
+
 
 dev_dependencies:
   flutter_test:
